# productsearch

./: .env.example  .gitignore  README.md  products_output.xlsx  pyproject.toml  企业.xlsx
.claude-plugin/: plugin.json
.claude-plugin/skills/product-search/: SKILL.md
.serena/: project.yml
config/: config.toml.example
src/product_search/: __init__.py  __main__.py  cli.py  repl.py
src/product_search/core/: config.py  exceptions.py  logger.py
src/product_search/graph/: conditions.py  workflow.py
src/product_search/llm/: factory.py
src/product_search/nodes/: analyze_node.py  extract_node.py  search_node.py
src/product_search/state/: graph_state.py
src/product_search/tools/: base.py  product_extractor.py  web_scraper.py  web_search.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_state.py  test_tools.py
