[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "product-search"
version = "0.2.0"
description = "AI Agent for searching and organizing company product information"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "langgraph", "product-search", "langchain"]

dependencies = [
    # LangChain/LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    # 工具
    "beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
    "ddgs>=0.1.0",
    # 基础设施
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomlkit>=0.12.0",
    # CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    # Excel
    "openpyxl>=3.1.0",
    # REPL
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
product-search = "product_search.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/product_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests (no API key required)",
    "integration: Integration tests (requires real API key)",
]

[tool.coverage.run]
source = ["src/product_search"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
